# Music-Sorting-Tools

./: .gitattributes  .gitignore  Nox Tools.sln
MusicSorter/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MusicSorter.vcxproj
ScrutchPlayer/: CMakeLists.txt  main.cpp
ScrutchPlayer/includes/: DatabaseManager.h  LibraryParser.h  MainWindow.h  ThumbnailManager.h  Track.h  TrackItemDelegate.h
ScrutchPlayer/src/: DatabaseManager.cpp  LibraryParser.cpp  MainWindow.cpp  ThumbnailManager.cpp  Track.cpp  TrackItemDelegate.cpp
ScrutchPlayer/ui/: MainWindow.ui
